--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ set(NEURO_EVOLUTION_VERSION
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/config.cmake)
 
 # Static library name
-set(NEURO_EVOLUTION_STATIC_LIBRARY_NAME NeuroEvolutionLib)
+set(NEURO_EVOLUTION_STATIC_LIBRARY NeuroEvolutionLib)
 
 # Executable name
 set(NEURO_EVOLUTION_EXECUTABLE_NAME NeuroEvolution)
@@ -155,12 +155,12 @@ endif()
 #                                   EXECUTABLE                                 #
 ################################################################################
 
-set(NEURO_EVOLUTION_INCLUDE_DIR ./code/include)
-set(NEURO_EVOLUTION_SOURCE_DIR ./code/src)
+set(NEURO_EVOLUTION_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/code/include)
+set(NEURO_EVOLUTION_SOURCE_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/code/src)
 
 # Include directories
 include_directories(${NEURO_EVOLUTION_INCLUDE_DIR} ${NEURO_EVOLUTION_SOURCE_DIR})
-include_directories(SYSTEM ${NEURO_EVOLUTION_EXTERN_INCLUDE_DIRS})
+include_directories(SYSTEM ${NEURO_EVOLUTION_EXTERN_INCLUDE_DIR})
 
 # Source files
 set(NEURO_EVOLUTION_HEADERS
@@ -184,12 +184,27 @@ set(NEURO_EVOLUTION_SOURCES
 
 # Static library
 set(LIBRARY_OUTPUT_PATH ${NEURO_EVOLUTION_BINARY_DIR})
-add_library(${NEURO_EVOLUTION_STATIC_LIBRARY_NAME}
+add_library(${NEURO_EVOLUTION_STATIC_LIBRARY}
     STATIC ${NEURO_EVOLUTION_HEADERS} ${NEURO_EVOLUTION_SOURCES}
 )
-target_link_libraries(${NEURO_EVOLUTION_STATIC_LIBRARY_NAME} ${NEURO_EVOLUTION_EXTERN_LIBRARIES})
+target_link_libraries(${NEURO_EVOLUTION_STATIC_LIBRARY} ${NEURO_EVOLUTION_EXTERN_LIBRARIES})
+
 
 # Executable
 set(EXECUTABLE_OUTPUT_PATH ${NEURO_EVOLUTION_BINARY_DIR})
 add_executable(${NEURO_EVOLUTION_EXECUTABLE_NAME} ${NEURO_EVOLUTION_SOURCE_DIR}/main.cpp)
-target_link_libraries(${NEURO_EVOLUTION_EXECUTABLE_NAME} ${NEURO_EVOLUTION_STATIC_LIBRARY_NAME})
+target_link_libraries(${NEURO_EVOLUTION_EXECUTABLE_NAME} ${NEURO_EVOLUTION_STATIC_LIBRARY})
+
+# Parent scope
+set(NEURO_EVOLUTION_INCLUDE_DIR ${NEURO_EVOLUTION_INCLUDE_DIR}
+    CACHE STRING "NeuroEvolution include directory"
+)
+set(NEURO_EVOLUTION_SOURCE_DIR  ${NEURO_EVOLUTION_SOURCE_DIR}
+    CACHE STRING "NeuroEvolution source directory"
+)
+set(NEURO_EVOLUTION_EXTERN_INCLUDE_DIR ${NEURO_EVOLUTION_EXTERN_INCLUDE_DIR}
+    CACHE STRING "NeuroEvolution extern include directory"
+)
+set(NEURO_EVOLUTION_STATIC_LIBRARY ${NEURO_EVOLUTION_STATIC_LIBRARY}
+    CACHE STRING "NeuroEvolution static library"
+)
