Added -DNEBUG in release mode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,10 @@ if(NEURO_EVOLUTION_COMPILER_GCC OR NEURO_EVOLUTION_COMPILER_CLANG)
     set(CMAKE_CXX_FLAGS_RELEASE "${CXX_DEFINES} ${CXX_FLAGS_RELEASE}")
     set(CMAKE_CXX_FLAGS_RELEASE ${CXX_FLAGS_RELEASE})
 
+    if(CMAKE_BUILD_TYPE STREQUAL Release)
+        add_definitions(-DNDEBUG)
+    endif()
+
     # Debug mode
     set(CXX_FLAGS_DEBUG "-O0 -g ${CXX_BASE_FLAGS}")
     set(CMAKE_CXX_FLAGS_DEBUG "${CXX_DEFINES} ${CXX_FLAGS_DEBUG}")
